--- a/package.json
+++ b/package.json
@@ -8,12 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/js-cookie": "^2.2.6",
+    "@types/nprogress": "^0.2.0",
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "css-loader": "^3.6.0",
+    "element-ui": "^2.13.2",
+    "js-cookie": "^2.2.1",
+    "node-sass": "^4.14.1",
+    "nprogress": "^0.2.0",
+    "path": "^0.12.7",
+    "register-service-worker": "^1.7.1",
+    "sass": "^1.26.9",
+    "svg-sprite-loader": "^5.0.0",
+    "tslint": "^6.1.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.4.2",
+    "vue-property-decorator": "^8.5.1",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-module-decorators": "^0.17.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
@@ -25,8 +39,10 @@
     "@vue/cli-plugin-vuex": "^4.4.0",
     "@vue/cli-service": "^4.4.0",
     "@vue/eslint-config-typescript": "^5.0.2",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
+    "import-path": "^1.0.14",
+    "sass-loader": "^7.3.1",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
   },
