--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "esnext",
     "strict": true,
     "jsx": "preserve",
+    "noImplicitAny": false,
     "importHelpers": true,
     "moduleResolution": "node",
     "experimentalDecorators": true,
@@ -35,5 +36,12 @@
   ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "typeRoots": [
+    "../node_modules/@types",
+    "../@types"
+  ],
+  "types": [
+    "node",
+  ],
 }
