--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "sass": "^1.26.9",
     "svg-sprite-loader": "^5.0.0",
     "tslint": "^6.1.2",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-react": "^5.0.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.5.1",
